projects/fints-go/antlr/fints_parser.go
// Code generated from /Users/sebi/src/100-days-of-code/projects/fints-go/antlr/fints.g4 by ANTLR 4.8. DO NOT EDIT.

package parser // fints

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'+'", "':'",
}
var symbolicNames = []string{
	"", "", "", "DT_AN",
}

var ruleNames = []string{
	"nachrichtenkopf", "segmentkopf", "segmentkennung", "segmentnummer", "segmentversion",
	"bezugssegment", "nachrichtengroesse", "hbciVersion", "dialogId", "nachrichtennummer",
	"bezugsnachricht", "de_sep", "deg_sep",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type fintsParser struct {
	*antlr.BaseParser
}

func NewfintsParser(input antlr.TokenStream) *fintsParser {
	this := new(fintsParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "fints.g4"

	return this
}

// fintsParser tokens.
const (
	fintsParserEOF   = antlr.TokenEOF
	fintsParserT__0  = 1
	fintsParserT__1  = 2
	fintsParserDT_AN = 3
)

// fintsParser rules.
const (
	fintsParserRULE_nachrichtenkopf    = 0
	fintsParserRULE_segmentkopf        = 1
	fintsParserRULE_segmentkennung     = 2
	fintsParserRULE_segmentnummer      = 3
	fintsParserRULE_segmentversion     = 4
	fintsParserRULE_bezugssegment      = 5
	fintsParserRULE_nachrichtengroesse = 6
	fintsParserRULE_hbciVersion        = 7
	fintsParserRULE_dialogId           = 8
	fintsParserRULE_nachrichtennummer  = 9
	fintsParserRULE_bezugsnachricht    = 10
	fintsParserRULE_de_sep             = 11
	fintsParserRULE_deg_sep            = 12
)

// INachrichtenkopfContext is an interface to support dynamic dispatch.
type INachrichtenkopfContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNachrichtenkopfContext differentiates from other interfaces.
	IsNachrichtenkopfContext()
}

type NachrichtenkopfContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNachrichtenkopfContext() *NachrichtenkopfContext {
	var p = new(NachrichtenkopfContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = fintsParserRULE_nachrichtenkopf
	return p
}

func (*NachrichtenkopfContext) IsNachrichtenkopfContext() {}

func NewNachrichtenkopfContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NachrichtenkopfContext {
	var p = new(NachrichtenkopfContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = fintsParserRULE_nachrichtenkopf

	return p
}

func (s *NachrichtenkopfContext) GetParser() antlr.Parser { return s.parser }

func (s *NachrichtenkopfContext) Segmentkopf() ISegmentkopfContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISegmentkopfContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISegmentkopfContext)
}

func (s *NachrichtenkopfContext) AllDe_sep() []IDe_sepContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDe_sepContext)(nil)).Elem())
	var tst = make([]IDe_sepContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDe_sepContext)
		}
	}

	return tst
}

func (s *NachrichtenkopfContext) De_sep(i int) IDe_sepContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDe_sepContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDe_sepContext)
}

func (s *NachrichtenkopfContext) Nachrichtengroesse() INachrichtengroesseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INachrichtengroesseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INachrichtengroesseContext)
}

func (s *NachrichtenkopfContext) HbciVersion() IHbciVersionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IHbciVersionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IHbciVersionContext)
}

func (s *NachrichtenkopfContext) DialogId() IDialogIdContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDialogIdContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDialogIdContext)
}

func (s *NachrichtenkopfContext) Nachrichtennummer() INachrichtennummerContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INachrichtennummerContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INachrichtennummerContext)
}

func (s *NachrichtenkopfContext) Bezugsnachricht() IBezugsnachrichtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBezugsnachrichtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBezugsnachrichtContext)
}

func (s *NachrichtenkopfContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NachrichtenkopfContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NachrichtenkopfContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.EnterNachrichtenkopf(s)
	}
}

func (s *NachrichtenkopfContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.ExitNachrichtenkopf(s)
	}
}

func (s *NachrichtenkopfContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case fintsVisitor:
		return t.VisitNachrichtenkopf(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *fintsParser) Nachrichtenkopf() (localctx INachrichtenkopfContext) {
	localctx = NewNachrichtenkopfContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, fintsParserRULE_nachrichtenkopf)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(26)
		p.Segmentkopf()
	}
	{
		p.SetState(27)
		p.De_sep()
	}
	{
		p.SetState(28)
		p.Nachrichtengroesse()
	}
	{
		p.SetState(29)
		p.De_sep()
	}
	{
		p.SetState(30)
		p.HbciVersion()
	}
	{
		p.SetState(31)
		p.De_sep()
	}
	{
		p.SetState(32)
		p.DialogId()
	}
	{
		p.SetState(33)
		p.De_sep()
	}
	{
		p.SetState(34)
		p.Nachrichtennummer()
	}
	p.SetState(38)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == fintsParserT__0 {
		{
			p.SetState(35)
			p.De_sep()
		}
		{
			p.SetState(36)
			p.Bezugsnachricht()
		}

	}

	return localctx
}

// ISegmentkopfContext is an interface to support dynamic dispatch.
type ISegmentkopfContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSegmentkopfContext differentiates from other interfaces.
	IsSegmentkopfContext()
}

type SegmentkopfContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySegmentkopfContext() *SegmentkopfContext {
	var p = new(SegmentkopfContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = fintsParserRULE_segmentkopf
	return p
}

func (*SegmentkopfContext) IsSegmentkopfContext() {}

func NewSegmentkopfContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SegmentkopfContext {
	var p = new(SegmentkopfContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = fintsParserRULE_segmentkopf

	return p
}

func (s *SegmentkopfContext) GetParser() antlr.Parser { return s.parser }

func (s *SegmentkopfContext) Segmentkennung() ISegmentkennungContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISegmentkennungContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISegmentkennungContext)
}

func (s *SegmentkopfContext) AllDeg_sep() []IDeg_sepContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDeg_sepContext)(nil)).Elem())
	var tst = make([]IDeg_sepContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDeg_sepContext)
		}
	}

	return tst
}

func (s *SegmentkopfContext) Deg_sep(i int) IDeg_sepContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeg_sepContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDeg_sepContext)
}

func (s *SegmentkopfContext) Segmentnummer() ISegmentnummerContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISegmentnummerContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISegmentnummerContext)
}

func (s *SegmentkopfContext) Segmentversion() ISegmentversionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISegmentversionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISegmentversionContext)
}

func (s *SegmentkopfContext) Bezugssegment() IBezugssegmentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBezugssegmentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBezugssegmentContext)
}

func (s *SegmentkopfContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SegmentkopfContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SegmentkopfContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.EnterSegmentkopf(s)
	}
}

func (s *SegmentkopfContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.ExitSegmentkopf(s)
	}
}

func (s *SegmentkopfContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case fintsVisitor:
		return t.VisitSegmentkopf(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *fintsParser) Segmentkopf() (localctx ISegmentkopfContext) {
	localctx = NewSegmentkopfContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, fintsParserRULE_segmentkopf)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(40)
		p.Segmentkennung()
	}
	{
		p.SetState(41)
		p.Deg_sep()
	}
	{
		p.SetState(42)
		p.Segmentnummer()
	}
	{
		p.SetState(43)
		p.Deg_sep()
	}
	{
		p.SetState(44)
		p.Segmentversion()
	}
	p.SetState(48)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == fintsParserT__1 {
		{
			p.SetState(45)
			p.Deg_sep()
		}
		{
			p.SetState(46)
			p.Bezugssegment()
		}

	}

	return localctx
}

// ISegmentkennungContext is an interface to support dynamic dispatch.
type ISegmentkennungContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSegmentkennungContext differentiates from other interfaces.
	IsSegmentkennungContext()
}

type SegmentkennungContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySegmentkennungContext() *SegmentkennungContext {
	var p = new(SegmentkennungContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = fintsParserRULE_segmentkennung
	return p
}

func (*SegmentkennungContext) IsSegmentkennungContext() {}

func NewSegmentkennungContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SegmentkennungContext {
	var p = new(SegmentkennungContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = fintsParserRULE_segmentkennung

	return p
}

func (s *SegmentkennungContext) GetParser() antlr.Parser { return s.parser }

func (s *SegmentkennungContext) AllDT_AN() []antlr.TerminalNode {
	return s.GetTokens(fintsParserDT_AN)
}

func (s *SegmentkennungContext) DT_AN(i int) antlr.TerminalNode {
	return s.GetToken(fintsParserDT_AN, i)
}

func (s *SegmentkennungContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SegmentkennungContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SegmentkennungContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.EnterSegmentkennung(s)
	}
}

func (s *SegmentkennungContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.ExitSegmentkennung(s)
	}
}

func (s *SegmentkennungContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case fintsVisitor:
		return t.VisitSegmentkennung(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *fintsParser) Segmentkennung() (localctx ISegmentkennungContext) {
	localctx = NewSegmentkennungContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, fintsParserRULE_segmentkennung)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(51)
	p.GetErrorHandler().Sync(p)
	_alt = 1 + 1
	for ok := true; ok; ok = _alt != 1 && _alt != antlr.ATNInvalidAltNumber {
		switch _alt {
		case 1 + 1:
			{
				p.SetState(50)
				p.Match(fintsParserDT_AN)
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(53)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext())
	}

	return localctx
}

// ISegmentnummerContext is an interface to support dynamic dispatch.
type ISegmentnummerContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSegmentnummerContext differentiates from other interfaces.
	IsSegmentnummerContext()
}

type SegmentnummerContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySegmentnummerContext() *SegmentnummerContext {
	var p = new(SegmentnummerContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = fintsParserRULE_segmentnummer
	return p
}

func (*SegmentnummerContext) IsSegmentnummerContext() {}

func NewSegmentnummerContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SegmentnummerContext {
	var p = new(SegmentnummerContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = fintsParserRULE_segmentnummer

	return p
}

func (s *SegmentnummerContext) GetParser() antlr.Parser { return s.parser }

func (s *SegmentnummerContext) AllDT_AN() []antlr.TerminalNode {
	return s.GetTokens(fintsParserDT_AN)
}

func (s *SegmentnummerContext) DT_AN(i int) antlr.TerminalNode {
	return s.GetToken(fintsParserDT_AN, i)
}

func (s *SegmentnummerContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SegmentnummerContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SegmentnummerContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.EnterSegmentnummer(s)
	}
}

func (s *SegmentnummerContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.ExitSegmentnummer(s)
	}
}

func (s *SegmentnummerContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case fintsVisitor:
		return t.VisitSegmentnummer(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *fintsParser) Segmentnummer() (localctx ISegmentnummerContext) {
	localctx = NewSegmentnummerContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, fintsParserRULE_segmentnummer)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(56)
	p.GetErrorHandler().Sync(p)
	_alt = 1 + 1
	for ok := true; ok; ok = _alt != 1 && _alt != antlr.ATNInvalidAltNumber {
		switch _alt {
		case 1 + 1:
			{
				p.SetState(55)
				p.Match(fintsParserDT_AN)
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(58)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext())
	}

	return localctx
}

// ISegmentversionContext is an interface to support dynamic dispatch.
type ISegmentversionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSegmentversionContext differentiates from other interfaces.
	IsSegmentversionContext()
}

type SegmentversionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySegmentversionContext() *SegmentversionContext {
	var p = new(SegmentversionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = fintsParserRULE_segmentversion
	return p
}

func (*SegmentversionContext) IsSegmentversionContext() {}

func NewSegmentversionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SegmentversionContext {
	var p = new(SegmentversionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = fintsParserRULE_segmentversion

	return p
}

func (s *SegmentversionContext) GetParser() antlr.Parser { return s.parser }

func (s *SegmentversionContext) AllDT_AN() []antlr.TerminalNode {
	return s.GetTokens(fintsParserDT_AN)
}

func (s *SegmentversionContext) DT_AN(i int) antlr.TerminalNode {
	return s.GetToken(fintsParserDT_AN, i)
}

func (s *SegmentversionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SegmentversionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SegmentversionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.EnterSegmentversion(s)
	}
}

func (s *SegmentversionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.ExitSegmentversion(s)
	}
}

func (s *SegmentversionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case fintsVisitor:
		return t.VisitSegmentversion(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *fintsParser) Segmentversion() (localctx ISegmentversionContext) {
	localctx = NewSegmentversionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, fintsParserRULE_segmentversion)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	_alt = 1 + 1
	for ok := true; ok; ok = _alt != 1 && _alt != antlr.ATNInvalidAltNumber {
		switch _alt {
		case 1 + 1:
			{
				p.SetState(60)
				p.Match(fintsParserDT_AN)
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(63)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())
	}

	return localctx
}

// IBezugssegmentContext is an interface to support dynamic dispatch.
type IBezugssegmentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBezugssegmentContext differentiates from other interfaces.
	IsBezugssegmentContext()
}

type BezugssegmentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBezugssegmentContext() *BezugssegmentContext {
	var p = new(BezugssegmentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = fintsParserRULE_bezugssegment
	return p
}

func (*BezugssegmentContext) IsBezugssegmentContext() {}

func NewBezugssegmentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BezugssegmentContext {
	var p = new(BezugssegmentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = fintsParserRULE_bezugssegment

	return p
}

func (s *BezugssegmentContext) GetParser() antlr.Parser { return s.parser }

func (s *BezugssegmentContext) AllDT_AN() []antlr.TerminalNode {
	return s.GetTokens(fintsParserDT_AN)
}

func (s *BezugssegmentContext) DT_AN(i int) antlr.TerminalNode {
	return s.GetToken(fintsParserDT_AN, i)
}

func (s *BezugssegmentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BezugssegmentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BezugssegmentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.EnterBezugssegment(s)
	}
}

func (s *BezugssegmentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.ExitBezugssegment(s)
	}
}

func (s *BezugssegmentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case fintsVisitor:
		return t.VisitBezugssegment(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *fintsParser) Bezugssegment() (localctx IBezugssegmentContext) {
	localctx = NewBezugssegmentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, fintsParserRULE_bezugssegment)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	_alt = 1 + 1
	for ok := true; ok; ok = _alt != 1 && _alt != antlr.ATNInvalidAltNumber {
		switch _alt {
		case 1 + 1:
			{
				p.SetState(65)
				p.Match(fintsParserDT_AN)
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(68)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext())
	}

	return localctx
}

// INachrichtengroesseContext is an interface to support dynamic dispatch.
type INachrichtengroesseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNachrichtengroesseContext differentiates from other interfaces.
	IsNachrichtengroesseContext()
}

type NachrichtengroesseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNachrichtengroesseContext() *NachrichtengroesseContext {
	var p = new(NachrichtengroesseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = fintsParserRULE_nachrichtengroesse
	return p
}

func (*NachrichtengroesseContext) IsNachrichtengroesseContext() {}

func NewNachrichtengroesseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NachrichtengroesseContext {
	var p = new(NachrichtengroesseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = fintsParserRULE_nachrichtengroesse

	return p
}

func (s *NachrichtengroesseContext) GetParser() antlr.Parser { return s.parser }

func (s *NachrichtengroesseContext) AllDT_AN() []antlr.TerminalNode {
	return s.GetTokens(fintsParserDT_AN)
}

func (s *NachrichtengroesseContext) DT_AN(i int) antlr.TerminalNode {
	return s.GetToken(fintsParserDT_AN, i)
}

func (s *NachrichtengroesseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NachrichtengroesseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NachrichtengroesseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.EnterNachrichtengroesse(s)
	}
}

func (s *NachrichtengroesseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(fintsListener); ok {
		listenerT.ExitNachrichtengroesse(s)
	}
}

func (s *NachrichtengroesseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case fintsVisitor:
		return t.VisitNachrichtengroesse(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *fintsParser) Nachrichtengroesse() (localctx INachrichtengroesseContext) {
	localctx = NewNachrichtengroesseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, fintsParserRULE_nachrichtengroesse)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(71)
	p.GetErrorHandler().Sync(p)
	_alt = 1 + 1
	for ok := true; ok; ok = _alt != 1 && _alt != antlr.ATNInvalidAltNumber {
		switch _alt {
		case 1 + 1:
			{
				p.SetState(70)
				p.Match(fintsParserDT_AN)
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(73)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext())
	}

	return localctx
}

// IHbciVersionContext is an interface to support dynamic dispatch.
type IHbciVersionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsHbciVersionContext differentiates from other interfaces.
	IsHbciVersionContext()
}

type HbciVersionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyHbciVersionContext() *HbciVersionContext {
	var p = new(HbciVersionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = fintsParserRULE_hbciVersion
	return p
}

func (*HbciVersionContext) IsHbciVersionContext() {}
